Migrate native code to use Java FFM API